DuPont DevSB/src/objects/Brand__c.object
<CustomObject>
    <description>This Object stores informations on Brands used in Accounts or in Qualifications</description>
    <fields>
        <fullName>Brand_L1__c</fullName>
        <label>Brand L1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_L2__c</fullName>
        <label>Brand L2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Targeted Geographical scope of this Brand</description>
        <inlineHelpText>Targeted Geographical scope of this Brand (Region or Region-Subregion)</inlineHelpText>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP-GCHINA</fullName>
                </value>
                <value>
                    <fullName>AP-INDIA</fullName>
                </value>
                <value>
                    <fullName>AP-JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP-KOREA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-BT</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-CE</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-PL</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-SCE</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE-BY</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE-CCA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE-RU</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE-UA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-SSA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-SSA-EA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-SSA-SA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-SSA-WA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-I</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-ME</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-NA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-P</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-T</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Involved_Org__c</fullName>
        <description>Organisations involved in this Initiative</description>
        <label>Involved Org</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>All DuPont</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCSE</fullName>
                </value>
                <value>
                    <fullName>DPE</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>DPVS</fullName>
                </value>
                <value>
                    <fullName>DSRB</fullName>
                </value>
                <value>
                    <fullName>DTF</fullName>
                </value>
                <value>
                    <fullName>DTT</fullName>
                </value>
                <value>
                    <fullName>ELEC</fullName>
                </value>
                <value>
                    <fullName>ELEC-MCM</fullName>
                </value>
                <value>
                    <fullName>ENGR</fullName>
                </value>
                <value>
                    <fullName>EP</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>FLPR</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IT&amp;S</fullName>
                </value>
                <value>
                    <fullName>LEGL</fullName>
                </value>
                <value>
                    <fullName>M&amp;S</fullName>
                </value>
                <value>
                    <fullName>MTEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-A&amp;HF</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-Agriculture</fullName>
                </value>
                <value>
                    <fullName>DPT-Air and Filtration</fullName>
                </value>
                <value>
                    <fullName>DPT-ASPS</fullName>
                </value>
                <value>
                    <fullName>DPT-Automotive</fullName>
                </value>
                <value>
                    <fullName>DPT-Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Cleanroom/Pharma</fullName>
                </value>
                <value>
                    <fullName>DPT-Covers</fullName>
                </value>
                <value>
                    <fullName>DPT-Critical Clean</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-Envelopes</fullName>
                </value>
                <value>
                    <fullName>DPT-ES</fullName>
                </value>
                <value>
                    <fullName>DPT-Graphics</fullName>
                </value>
                <value>
                    <fullName>DPT-Ind Pkg &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>DPT-Mechanical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Fabrics</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Specialties</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>DPT-Optical</fullName>
                </value>
                <value>
                    <fullName>DPT-PM</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-ER</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-LE</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-MIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Main URL documenting the use of this brand</description>
        <inlineHelpText>Main URL documenting the use of this brand</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owning_Organization__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Geography__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_L1__c</columns>
        <columns>Brand_L2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCAdminSupport787141</group>
            <group>SFDCCRMEngagementTeams</group>
            <group>SFDCCRMITProjectTeams</group>
            <group>SFDCDuPontSystemAdministrators</group>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DuPontProtectionTechnologies</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_eWarranty_Brands</fullName>
        <columns>NAME</columns>
        <columns>Brand_L1__c</columns>
        <columns>Geography__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <columns>Owning_Organization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_L1__c</field>
            <operation>startsWith</operation>
            <value>eWarranty_</value>
        </filters>
        <label>All eWarranty Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAWarrantyManagement</group>
            <group>BI_EMEA_Entitlement_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nomex_Brands</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Brand_L1__c</columns>
        <columns>Brand_L2__c</columns>
        <columns>Stage__c</columns>
        <columns>Type__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>Involved_Org__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_L1__c</field>
            <operation>startsWith</operation>
            <value>Nomex</value>
        </filters>
        <label>Nomex Brands</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK_eWarranty_Brands</fullName>
        <columns>NAME</columns>
        <columns>Brand_L1__c</columns>
        <columns>Geography__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <columns>Owning_Organization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_L1__c</field>
            <operation>startsWith</operation>
            <value>eWarranty_UK</value>
        </filters>
        <label>UK eWarranty Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAWarrantyManagement</group>
            <group>BI_EMEA_Entitlement_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <recordTypes>
        <fullName>EMEA_Brand</fullName>
        <active>true</active>
        <description>For capturing Brand information in the EMEA region</description>
        <label>EMEA Brand</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>